{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 4413,
  "lineage": "59321509-ea19-9cf8-1228-72848d506656",
  "resources": [
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:security-group/sg-096c0a48a16bbeac8",
            "description": "WP Project Security Group",
            "egress": [],
            "id": "sg-096c0a48a16bbeac8",
            "ingress": [],
            "name": "wp-project-efs-sg",
            "name_prefix": "",
            "owner_id": "211125411635",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "WP Project EFS Filesystem and Access Point"
            },
            "tags_all": {
              "Name": "WP Project EFS Filesystem and Access Point"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.22.48.0/20",
              "10.22.64.0/20",
              "10.22.80.0/20"
            ],
            "description": "NFS ingress from VPC private subnets",
            "from_port": 2049,
            "id": "sgrule-3116038399",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-096c0a48a16bbeac8",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.efs.aws_security_group.this",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:security-group/sg-00d6d8c587e4b39f8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00d6d8c587e4b39f8",
            "ingress": [],
            "name": "wp-project-memcached-sg-20240922062110205000000007",
            "name_prefix": "wp-project-memcached-sg-",
            "owner_id": "211125411635",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WP Project Memcached Sgr",
              "terraform-aws-modules": "elasticache"
            },
            "tags_all": {
              "Name": "WP Project Memcached Sgr",
              "terraform-aws-modules": "elasticache"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_vpc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:security-group-rule/sgr-09729f1cb8f90f096",
            "cidr_ipv4": "10.22.0.0/16",
            "cidr_ipv6": null,
            "description": "WP Project VPC Ingress Traffic",
            "from_port": 11211,
            "id": "sgr-09729f1cb8f90f096",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d6d8c587e4b39f8",
            "security_group_rule_id": "sgr-09729f1cb8f90f096",
            "tags": {
              "Name": "WP Project Memcached Sgr",
              "terraform-aws-modules": "elasticache"
            },
            "tags_all": {
              "Name": "WP Project Memcached Sgr",
              "terraform-aws-modules": "elasticache"
            },
            "to_port": 11211
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elasticache.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds-aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:security-group/sg-05e790e4ce48c7792",
            "description": "Control traffic to/from RDS Aurora wp-project-rds",
            "egress": [],
            "id": "sg-05e790e4ce48c7792",
            "ingress": [],
            "name": "wp-project-rds-aurora-sgr-20240922062110218000000008",
            "name_prefix": "wp-project-rds-aurora-sgr-",
            "owner_id": "211125411635",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wp-project-rds-aurora-sgr"
            },
            "tags_all": {
              "Name": "wp-project-rds-aurora-sgr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds-aurora",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.22.0.0/16"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-440226344",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05e790e4ce48c7792",
            "security_group_rule_id": "sgr-0b4da8bf2cd971f1f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds-aurora.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdd553b15836273f",
            "arn": "arn:aws:ec2:us-east-1:211125411635:elastic-ip/eipalloc-0cdd553b15836273f",
            "domain": "vpc",
            "id": "eipalloc-0cdd553b15836273f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-203-145-119.compute-1.amazonaws.com",
            "public_ip": "52.203.145.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "WP Project-us-east-1a"
            },
            "tags_all": {
              "Name": "WP Project-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:internet-gateway/igw-0526b38b2c3eb4d42",
            "id": "igw-0526b38b2c3eb4d42",
            "owner_id": "211125411635",
            "tags": {
              "Name": "WP Project Public IGW"
            },
            "tags_all": {
              "Name": "WP Project Public IGW"
            },
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdd553b15836273f",
            "association_id": "eipassoc-0218b265cc18d14f5",
            "connectivity_type": "public",
            "id": "nat-035605ae10befd8be",
            "network_interface_id": "eni-05da89b5653d3a18e",
            "private_ip": "10.22.14.153",
            "public_ip": "52.203.145.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07702c8ab3a788461",
            "tags": {
              "Name": "WP Project Priv NATGW"
            },
            "tags_all": {
              "Name": "WP Project Priv NATGW"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a2add6a17461f6be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-035605ae10befd8be",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2add6a17461f6be",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0526b38b2c3eb4d42",
            "id": "r-rtb-0b0c6d079db58377b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b0c6d079db58377b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:route-table/rtb-0a2add6a17461f6be",
            "id": "rtb-0a2add6a17461f6be",
            "owner_id": "211125411635",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "WP Project Private App Rtb"
            },
            "tags_all": {
              "Name": "WP Project Private App Rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:route-table/rtb-0b0c6d079db58377b",
            "id": "rtb-0b0c6d079db58377b",
            "owner_id": "211125411635",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "WP Project Public Rtb"
            },
            "tags_all": {
              "Name": "WP Project Public Rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e08adc51335af79",
            "route_table_id": "rtb-0a2add6a17461f6be",
            "subnet_id": "subnet-05b40dbfc69e6fa66"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0009d7327a7c2a66a",
            "route_table_id": "rtb-0a2add6a17461f6be",
            "subnet_id": "subnet-028822022a0b96f88"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05be53677604d89f9",
            "route_table_id": "rtb-0a2add6a17461f6be",
            "subnet_id": "subnet-0d5d3e4cd683bf142"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd997efb6c60ca07",
            "route_table_id": "rtb-0a2add6a17461f6be",
            "subnet_id": "subnet-082adc81881fa96df"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069d0e76ba5ae35cd",
            "route_table_id": "rtb-0a2add6a17461f6be",
            "subnet_id": "subnet-041100e47b739e84a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf2b74806783e2db",
            "route_table_id": "rtb-0a2add6a17461f6be",
            "subnet_id": "subnet-06e83a542ec7d2e18"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039408c6f03cb019e",
            "route_table_id": "rtb-0b0c6d079db58377b",
            "subnet_id": "subnet-07702c8ab3a788461"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0357b50882588b5c1",
            "route_table_id": "rtb-0b0c6d079db58377b",
            "subnet_id": "subnet-0f7b454142289e573"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6bf975f68f322c8",
            "route_table_id": "rtb-0b0c6d079db58377b",
            "subnet_id": "subnet-09f464f219ad80abd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:subnet/subnet-05b40dbfc69e6fa66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.22.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b40dbfc69e6fa66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125411635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WP Project-priv-data-1a"
            },
            "tags_all": {
              "Name": "WP Project-priv-data-1a"
            },
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:subnet/subnet-028822022a0b96f88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.22.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028822022a0b96f88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125411635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WP Project-priv-data-1b"
            },
            "tags_all": {
              "Name": "WP Project-priv-data-1b"
            },
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:subnet/subnet-0d5d3e4cd683bf142",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.22.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5d3e4cd683bf142",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125411635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WP Project-priv-data-1c"
            },
            "tags_all": {
              "Name": "WP Project-priv-data-1c"
            },
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:subnet/subnet-082adc81881fa96df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.22.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082adc81881fa96df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125411635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WP Project-priv-app-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "WP Project-priv-app-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:subnet/subnet-041100e47b739e84a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.22.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041100e47b739e84a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125411635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WP Project-priv-app-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "WP Project-priv-app-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:subnet/subnet-06e83a542ec7d2e18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.22.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e83a542ec7d2e18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125411635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WP Project-priv-app-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "WP Project-priv-app-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:subnet/subnet-07702c8ab3a788461",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.22.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07702c8ab3a788461",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125411635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WP Project-pub-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "WP Project-pub-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:subnet/subnet-0f7b454142289e573",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.22.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7b454142289e573",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125411635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WP Project-pub-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "WP Project-pub-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:subnet/subnet-09f464f219ad80abd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.22.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f464f219ad80abd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125411635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WP Project-pub-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "WP Project-pub-1c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fdbf3372e328ea54"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125411635:vpc/vpc-0fdbf3372e328ea54",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.22.0.0/16",
            "default_network_acl_id": "acl-0403aa0fff0ca425c",
            "default_route_table_id": "rtb-07e2683f7caddd5be",
            "default_security_group_id": "sg-0317d9a94125f3751",
            "dhcp_options_id": "dopt-001634b42d40c8b1c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fdbf3372e328ea54",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e2683f7caddd5be",
            "owner_id": "211125411635",
            "tags": {
              "Name": "WP Project"
            },
            "tags_all": {
              "Name": "WP Project"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}